changed my name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Imran Khan - Personal Web Page</title>
+  <title>Imran Ullah - Personal Web Page</title>
   <meta property="og:title" content="Imran Khan" />
   <meta property="og:description" content="My personal web page" />
 
