Ihsan sir colors change

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <span class="badge-professional badge bg-pink text-light"><small>Power Electronics</small></span>
         <br>
         <span class="badge-professional badge bg-purple text-light"><small>Isolated gate driver</small></span>
-        <span class="badge-professional badge bg-yellow text-light"><small>Monolithic integrated circuit</small></span>
+        <span class="badge-professional badge bg-gray text-light"><small>Monolithic integrated circuit</small></span>
         <span class="badge-professional badge bg-yellow text-light"><small>HIFU cancer therapy</small></span>
       </div>
     </div>
